# adt

./: .env  .gitignore  .justfile  Dockerfile  README.md  docker-compose.yml  flake.nix  logs  pyproject.toml
docs/: ERD.mmd
docs/portfolio_1/: main.tex
docs/portfolio_2/: literatur.bib  main.tex
docs/portfolio_2/figures/: pipeline_diagram.tex  stack_diagram.tex
docs/portfolio_3/: main.tex
docs/portfolio_3/figures/: Messergebnisse.tex  Performance-Vergleich.tex
docs/portfolio_4/: literatur.bib  main.tex
grafana/dashboards/: lobbyregister-advanced-analytics.json  lobbyregister-advanced.json  lobbyregister-city.json  lobbyregister-compliance.json  lobbyregister-finance-watch.json  lobbyregister-geo.json  lobbyregister-legislation.json  lobbyregister-market.json  lobbyregister-network.json  lobbyregister-optimized.json  lobbyregister-organization.json  lobbyregister-overview.json  lobbyregister-party.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
scripts/: benchmark.py  complex_query_v1.sql  complex_query_v2.sql  complex_query_v3.sql  complex_query_v4.sql  dump_db.sh  generate_er_diagram.py  measure_full.sh
scripts/docs/: benchmark_report.md  benchmark_report_optimizedquery.md  benchmark_report_unoptimized.md
src/lobbyregister_ingestor/: __init__.py  __main__.py  api-docs-lobbyregister.yaml  api.py  api_client.py  config.py  db_connector.py  ingest.py  logging_utils.py  models.py  optimization.sql  persistence.py  schema.py  schema_builder.py  schema_init.py  scheme-complete.json  scheme.json  scheme.sql  writer.py
src/lobbyregister_ingestor/mappings/: __init__.py  account.py  activities.py  annual_reports.py  clients.py  code_of_conduct.py  common.py  contracts.py  employees.py  funding.py  lobbyist_identity.py  register_core.py  register_details.py  registry.py  regulatory_projects.py  statements.py
